# whiskers-launcher

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.vue  data.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  data_structs.rs  main.rs
src-tauri/src/extensions/: mod.rs
src-tauri/src/structs/: mod.rs
src/companion/: .gitignore  bun.lockb  package-lock.json  package.json  vite.config.ts
src/companion/src-tauri/: Cargo.toml  tauri.conf.json
src/companion/src-tauri/icons/: icon.icns
src/companion/src-tauri/src/: functions.rs  main.rs
src/companion/src-tauri/src/indexing/: mod.rs
src/components/: Select.vue  Slider.vue  Switch.vue
src/install/: Cargo.toml
src/install-cli/: Cargo.toml
src/install-cli/files/linux/binaries/: whiskers-launcher.desktop
src/install-cli/files/windows/scripts/: disable-autostart.ps1
src/install-cli/src/: main.rs  windows-install.ps1
src/install-script/: Cargo.toml
src/install/src/: main.rs
src/pages/Dialogs/: AddSearchEngineDialog.vue  CommunityExtensionsDialog.vue  CommunityThemesDialog.vue  DeleteSearchEngineDialog.vue  EditSearchEngineDialog.vue  ExtensionDialog.vue  ImportExtensionDialog.vue
src/pages/Search/: Search.vue
src/pages/Settings/: AboutTab.vue  ExtensionsTab.vue  GeneralTab.vue  Navbar.vue  ResultsTab.vue  SearchBoxTab.vue  SearchEnginesTab.vue  Settings.ts  Settings.vue  ThemesTab.vue  WebSearchTab.vue
src/resources/ps-scripts/: disable-autostart.ps1  enable-autostart.ps1  index-apps.ps1
src/simple-kl/: README.md  package-lock.json  package.json
src/simple-kl-manager/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/simple-kl-manager/src/: App.vue
src/simple-kl-manager/src-tauri/: Cargo.toml  tauri.conf.json
src/simple-kl-manager/src-tauri/icons/: icon.icns
src/simple-kl-manager/src-tauri/src/: main.rs
src/simple-kl-service/: index.html  package-lock.json  package.json
src/simple-kl-service/src-tauri/: Cargo.toml  tauri.conf.json
src/simple-kl-service/src-tauri/src/: functions.rs  main.rs
src/simple-kl-service/src-tauri/src/structs/: mod.rs
src/simple-kl/src/: Root.vue  data.ts  main.ts  styles.css
src/simple-kl/src-tauri/: Cargo.toml  tauri.conf.json
src/simple-kl/src-tauri/src/: main.rs
src/simple-kl/src-tauri/src/extensions/: mod.rs
src/simple-kl/src-tauri/src/files/: simple-kl-service.desktop
src/simple-kl/src-tauri/src/pages/: mod.rs
src/simple-kl/src-tauri/src/structs/: mod.rs
src/simple-kl/src-tauri/src/themes/: mod.rs
src/simple-kl/src-tauri/src/utils/: mod.rs
src/simple-kl/src/components/: DangerButton.vue  Input.vue  PrimaryButton.vue  RestoreButton.vue  SecondaryButton.vue  SectionDivider.vue  Select.vue  Slider.vue
src/uninstall/: Cargo.toml
src/uninstall-cli/: Cargo.toml
src/uninstall-cli/src/: main.rs  windows-uninstall.ps1
src/uninstall-script/: Cargo.toml
src/whiskers/: .gitignore  bun.lockb  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1712414573103-f842a0f160bae.mjs
src/whiskers-launcher/: bun.lockb  package-lock.json  package.json  settings.gradle.kts  svelte.config.js  vite.config.ts
src/whiskers-launcher-companion/: Cargo.toml  bun.lockb  package-lock.json  package.json
src/whiskers-launcher-companion/src/: main.rs
src/whiskers-launcher-companion/src-tauri/: Cargo.toml  tauri.conf.json
src/whiskers-launcher-companion/src-tauri/icons/: icon.icns
src/whiskers-launcher-companion/src-tauri/src/: main.rs
src/whiskers-launcher-companion/src-tauri/src/indexing/: mod.rs
src/whiskers-launcher-companion/src-tauri/src/windows/: mod.rs
src/whiskers-launcher-companion/src/features/: mod.rs
src/whiskers-launcher-companion/src/features/actions/: mod.rs
src/whiskers-launcher-companion/src/features/search/: mod.rs
src/whiskers-launcher-companion/src/features/settings/: mod.rs
src/whiskers-launcher/.fleet/: receipt.json
src/whiskers-launcher/composeApp/: build.gradle.kts
src/whiskers-launcher/gradle/: libs.versions.toml
src/whiskers-launcher/src/: app.d.ts  utils.ts
src/whiskers-launcher/src-tauri/: Cargo.toml  tauri.conf.json
src/whiskers-launcher/src-tauri/icons/: icon.icns
src/whiskers-launcher/src-tauri/src/: main.rs
src/whiskers-launcher/src-tauri/src/commands/search/: mod.rs
src/whiskers-launcher/src-tauri/src/commands/settings/: mod.rs
src/whiskers-launcher/src-tauri/src/features/: mod.rs
src/whiskers-launcher/src-tauri/src/features/actions/: mod.rs
src/whiskers-launcher/src-tauri/src/features/extensions/: mod.rs
src/whiskers-launcher/src-tauri/src/features/form/: mod.rs
src/whiskers-launcher/src-tauri/src/features/search/: mod.rs
src/whiskers-launcher/src-tauri/src/features/settings/: mod.rs
src/whiskers-launcher/src-tauri/src/features/window_managing/: mod.rs
src/whiskers-launcher/src-tauri/src/windows/: mod.rs
src/whiskers-launcher/src/routes/: +page.svelte  dialog-frame-vm.ts  dialog-frame.svelte  search-vm.ts
src/whiskers.bak/: .eslintrc.json  tailwind.config.js  tsconfig.json
src/whiskers.bak/src/: DialogPayloads.ts  main.ts  styles.css
src/whiskers.bak/src-tauri/: tauri.conf.json
src/whiskers.bak/src-tauri/icons/: icon.icns
src/whiskers.bak/src-tauri/src/: main.rs
src/whiskers.bak/src/components/: InputSetting.vue  SelectField.vue  SwitchSetting.vue  TextArea.vue
src/whiskers/src/: DialogPayloads.ts  Root.vue  main.ts  styles.css  utils.ts
src/whiskers/src-tauri/: Cargo.toml  tauri.conf.json
src/whiskers/src-tauri/src/: main.rs
src/whiskers/src-tauri/src/pages/: mod.rs
src/whiskers/src-tauri/src/pages/search/: mod.rs
src/whiskers/src-tauri/src/pages/settings_page/: mod.rs
src/whiskers/src-tauri/src/utils/: mod.rs
src/whiskers/src/components/: ComponentClasses.ts  InputField.vue  InputSetting.vue  PrimaryButton.vue  RadioButton.vue  SecondaryButton.vue  SelectField.vue  SelectFileSetting.vue  SelectSetting.vue  Slider.vue  SliderSetting.vue  Switch.vue  SwitchSetting.vue  TextAreaSetting.vue
(+150 files in other folders)
