[package]
name = "simple_keyboard_launcher"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "protocol-all", "fs-all", "global-shortcut-all", "system-tray", "macos-private-api", "window-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.99"
tauri-plugin-positioner = "1.0.4"
dirs = "5.0.1"
simple_kl_rs = {path = "/home/lighttigerxiv/Development/Crates/simple-kl-rs"}
freedesktop-icons = "0.2.3"
freedesktop-desktop-entry = "0.5.0"
tokio = { version = "1.29.0", features= ["full"] }
fuzzy-matcher = "0.3.7"
open = "5.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
