[package]
name = "install"
version = "2.0.0"
edition = "2021"


[dependencies]
whiskers-launcher-rs = { git = "https://github.com/Whiskers-Apps/whiskers-launcher-rs" }
fs_extra = "1.3.0"
rust-embed = { version = "8.4.0", features = ["interpolate-folder-path"] }

[target.'cfg(target_os = "windows")'.dependencies]
winres = "0.1.12"
mslnk = "0.1.8"
