[package]
name = "install"
version = "3.1.0"
edition = "2021"


[dependencies]
fs_extra = "1.3.0"
rust-embed = { version = "8.4.0", features = ["interpolate-folder-path"] }
sysinfo = "0.30.12"
whiskers-launcher-core = "0.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
winres = "0.1.12"
mslnk = "0.1.8"
