[package]
name = "whiskers-launcher-companion"
version = "3.0.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.19", features = ["derive"] }
eval = "0.4.3"
image = "0.25.2"
open = "5.3.0"
serde = "1.0.210"
serde_json = "1.0.128"
sniffer-rs = "1.0.2"
tokio = { version = "1.40.0", features = ["full"] }
whiskers-launcher-core = { path = "/home/lighttigerxiv/Projects/whiskers-apps/whiskers-launcher-core", features = [
    "all",
] }


[target.'cfg(target_os = "windows")'.dependencies]
powershell_script = "1.1.0"
