[package]
name = "whiskers-launcher-companion"
version = "1.1.2"
description = "Whiskers Launcher Companion"
authors = ["lighttigerxiv"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
#whiskers-launcher-rs= {path = "/home/lighttigerxiv/Coding/Rust/Projects/whiskers-launcher-rs"}
#whiskers-launcher-rs = { path = "C:\\Users\\lighttigerXIV\\Documents\\Coding\\Rust\\Projects\\whiskers-launcher-rs" }
whiskers-launcher-rs = { git = "https://github.com/lighttigerXIV/whiskers-launcher-rs.git" }

notify = "6.1.1"
tauri = { version = "1.5.0", features = ["system-tray", "shell-open"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tauri-plugin-positioner = "1.0.4"

tokio = { version = "1.32.0", features = ["full"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
walkdir = "2.4.0"
arboard = "3.3.1"

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop-desktop-entry = "0.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
lnk = "0.5.1"
powershell_script = "1.1.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
