[package]
name = "simple-kl-manager"
version = "0.0.0"
description = "Simple Keyboard Launcher Manager"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.1", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = {version = "1.32.0", features = ["full"] }
zip-extract = "0.1.2"
simple_kl_rs = {git = "https://github.com/lighttigerXIV/simple-kl-rs", branch = "master"}
fs_extra = "1.3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
