[package]
name = "simple-kl-service"
version = "0.0.0"
description = "Simple Keyboard Launcher Service"
authors = ["lighttigerxiv"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
#Ignore the following 2 lines
#simple_kl_rs = {path = "/home/lighttigerxiv/Development/Crates/simple-kl-rs"}
#simple_kl_rs = {path = "C:\\Users\\lighttigerxiv\\Documents\\Development\\Simple-Keyboard-Launcher\\simple-kl-rs"}
simple_kl_rs = { git="https://github.com/lighttigerXIV/simple-kl-rs", branch = "master"}

tauri = { version = "1.4", features = ["system-tray", "shell-open"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_yaml = "0.9.25"
tauri-plugin-positioner = "1.0.4"

tokio = { version = "1.32.0", features = ["full"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop-desktop-entry = "0.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
lnk = "0.5.1"
powershell_script = "1.1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
