[package]
name = "whiskers-launcher-companion"
version = "2.2.3"
description = "Whiskers Launcher companion"
authors = ["Whiskers-Apps", "lighttigerXIV"]
license = "MIT"
repository = "https://github.com/Whiskers-Apps/whiskers-launcher/"
edition = "2021"
rust-version = "1.60"


[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.2", features = [
    "global-shortcut-all",
    "system-tray",
    "fs-all",
    "protocol-all",
] }

whiskers-launcher-core = { path = "/home/lighttigerxiv/Projects/whiskers-apps/whiskers-launcher-core" }

tokio = { version = "1.37.0", features = ["full"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
bincode = "1.3.3"
walkdir = "2.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
