[package]
name = "app"
version = "2.1.0"
description = "A Tauri App"
authors = ["Whiskers Apps"]
license = "MIT"
repository = "https://github.com/Whiskers-Apps/whiskers-launcher"
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.3", features = [ "clipboard-all", "path-all", "dialog-save", "dialog-open", "protocol-all", "fs-all", "shell-all", "window-all"] }

whiskers-launcher-rs = {git = "https://github.com/Whiskers-Apps/whiskers-launcher-rs.git"}
#whiskers-launcher-rs = {path = "/home/lighttigerxiv/Projects/Cli/whiskers-launcher-rs"}
#whiskers-launcher-rs = {path = "C:\\Users\\lighttigerXIV\\Projects\\WhiskersApps\\whiskers-launcher-rs"}
tokio = {version = "1.37.0", features = ["full"] }
bincode = "*"
open = "5.1.3"
git2 = "0.18.3"
tauri-plugin-clipboard = "1.1.3"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
enigo = "0.2.1"
eval = "0.4.3"
sniffer-rs = "1.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
powershell_script = "1.1.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
