[package]
name = "whiskers-launcher"
version = "1.1.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
#whiskers-launcher-rs = {path = "/home/lighttigerxiv/Coding/Rust/Projects/whiskers-launcher-rs"}
#whiskers-launcher-rs = { path = "C:\\Users\\lighttigerXIV\\Documents\\Coding\\Rust\\Projects\\whiskers-launcher-rs" }
whiskers-launcher-rs = {git = "https://github.com/lighttigerXIV/whiskers-launcher-rs.git"}


tauri = { version = "1.5.1", features = [ "os-all", "protocol-all", "fs-all", "global-shortcut-all", "system-tray", "macos-private-api", "window-all", "shell-open"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.25"
tauri-plugin-positioner = "1.0.4"
dirs = "5.0.1"
tokio = { version = "1.29.0", features= ["full"] }
fuzzy-matcher = "0.3.7"
open = "5.0.0"
rand = "0.8.5"
git2 = "0.18.0"
enigo = "0.1.3"
encoding = "0.2.33"
reqwest = "0.11.22"
online = "4.0.1"

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop-desktop-entry = "0.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
lnk = "0.5.1"
powershell_script = "1.1.0"
winapi = "0.3.9"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
